syntax = "proto3";

package example.v1;

message GetExampleMessageRequest {
  int32 ran_number = 1;
}

message ExampleMessage {
  int32 number = 1;
  string concat_string = 2;
}

message GetExampleMessageResponse {
  ExampleMessage example_message = 1;
}